--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.6.2"
   }
 }
